--- a/footer.css
+++ b/footer.css
@@ -37,7 +37,7 @@
     content: "";
     position: absolute;
     left: 0;
-    bottom: 10px;
+    bottom: -1px;
     height: 2px;
     width: 0;
     background-color: #ECE6D4;
@@ -56,7 +56,9 @@
 } 
 .footer-contact-section span{ 
     font-size: 20px; 
- 
+    background-color: #ECE6D4;
+    text-decoration: none;
+    background: none;
 } 
 
 .footer-section3 div{ 
