--- a/header.css
+++ b/header.css
@@ -385,6 +385,23 @@ progress::-moz-progress-bar {
   border-radius: 999px;
 }
 
+.cart-summary {
+  margin: 0 1.5%;
+  display: flex;
+  justify-content: space-between;
+}
+#checkout-form{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+.checkout-btn {
+  width: 80%;
+  color: #fff;
+  background-color: #212121;
+  height: 40px;
+  border-radius: 2%;
+}
 
 
 
