--- a/product.css
+++ b/product.css
@@ -1,23 +1,40 @@
+#product {
+    display: flex;
+    margin-left: 3%;
+    margin-right: 3%;
+}
 
-.product-detail {
-    max-width: 800px;
-    margin: auto;
-    text-align: center;
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+
+
+#product-photos {
+    width: 40%;
+    height: 80vh;
+    margin-right: 15px;
 }
-.slider {
+
+#product-details {
+    width: 60%;
+}
+
+#slider {
     position: relative;
+    display: block;
     width: 100%;
-    margin-bottom: 15px;
+    height: 80%;
+    align-items: center;   /* Vertical center */
+    justify-content: center; /* Horizontal center */
+    gap: 10px; /* Space between buttons and image */
     overflow: hidden;
+    object-fit: cover;
 }
-.slider img {
-    max-width: 100%;
-    border-radius: 8px;
+
+#slider img {
+    margin-top: 10px;
+    width: 100%;
+    object-fit: cover;
+    display: block;
 }
+
 .nav-btn {
     position: absolute;
     top: 50%;
@@ -52,13 +69,18 @@
 .thumbnails img.active {
     border-color: #d38f12;
 }
-h1 {
-    color: #d38f12;
-    margin-bottom: 10px;
+#product-details p {
+    margin-top: 10px;
+    margin-bottom: 0;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 700;   /* Bold */
+    font-size: 60px;    /* Adjust size as needed */
+    line-height: 1.1;   /* Tight spacing like in image */
+    color: #222;      
 }
 .price {
     font-size: 24px;
-    color: green;
+    color: #222;
     margin-top: 10px;
 }
 .description {
@@ -66,22 +88,63 @@ h1 {
     font-size: 18px;
     text-align: center;
 }
-.back {
-    margin-top: 20px;
+#price-add{
+    display: flex;
+    justify-content: space-between;
 }
-.back a {
-    text-decoration: none;
-    color: #d38f12;
-    font-weight: bold;
+
+#product-add{
+    padding: 5px 10px;
+    color: #fff;
+    background-color: #212121;
+    border-radius: 2%;
 }
+ 
 /* Responsive Design */
 @media (max-width: 600px) {
-    .slider img {
-        max-height: 250px;
+    .nav-btn {
+        display: none;
+    }
+
+    #product {
+        display: block;
+    }
+    #product-photos{
+        width: 100%;
+        height: 50vh;
+    }
+    #product-details {
+        width: 100%;
+    }
+
+
+    #slider img {
+        margin-top: 10px;
+        width: 100%;
+        /* max-height: 365px; */
         object-fit: cover;
+        display: block;
     }
     .thumbnails img {
-        width: 50px;
-        height: 50px;
+        width: 60px;
+        height: 60px;
+    }
+    
+
+
+    #product-details p {
+        margin-top: 10px;
+        margin-bottom: 0;
+        font-family: 'Cormorant Garamond', serif;
+        font-weight: 800px;   /* Bold */
+        font-size: 40px;    /* Adjust size as needed */
+        line-height: 1.1;   /* Tight spacing like in image */
+        color: #222;      
+    }
+
+    .description {
+        margin: 15px 0;
+        font-size: 18px;
+        text-align: center;
     }
 }
